<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:app="http://schemas.android.com/apk/res-auto"
	 xmlns:tools="http://schemas.android.com/tools"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 android:orientation="vertical"
	 tools:context=".mainActivity.view.MainActivity">

	 <androidx.appcompat.widget.Toolbar
		  android:id="@+id/toolbar"
		  android:layout_width="match_parent"
		  android:layout_height="?attr/actionBarSize"
		  android:background="@drawable/gradient_toolbar" />

	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent">

		  <RelativeLayout
			   android:id="@+id/rtlFirstScreen"
			   android:layout_width="match_parent"
			   android:layout_height="match_parent"
			   android:background="@drawable/ic_background"
			   android:gravity="center"
			   android:padding="@dimen/layout_padding_10dp"
			   android:visibility="visible">

			   <androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<ImageView
						 android:id="@+id/imageView2"
						 android:layout_width="@dimen/layout_height_150dp"
						 android:layout_height="@dimen/layout_height_150dp"
						 android:src="@drawable/ic_logo"
						 app:layout_constraintEnd_toEndOf="parent"
						 app:layout_constraintStart_toStartOf="parent"
						 app:layout_constraintTop_toTopOf="parent"
						 tools:ignore="ContentDescription" />

					<TextView
						 android:id="@+id/textView"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_marginTop="@dimen/layout_margin_8dp"
						 android:fontFamily="@font/almendra_bold"
						 android:gravity="center"
						 android:text="@string/welcome_to_quiz_app"
						 android:textColor="@color/welcome_txt"
						 android:textSize="@dimen/text_size_24sp"
						 android:textStyle="bold"
						 app:layout_constraintEnd_toEndOf="@+id/imageView2"
						 app:layout_constraintStart_toStartOf="@+id/imageView2"
						 app:layout_constraintTop_toBottomOf="@+id/imageView2" />

					<com.google.android.material.textfield.TextInputLayout
						 android:id="@+id/textInputLayout_NameUser"
						 android:layout_width="@dimen/layout_zero"
						 android:layout_height="wrap_content"
						 android:layout_marginTop="@dimen/layout_margin_8dp"
						 app:layout_constraintEnd_toEndOf="@+id/textView"
						 app:layout_constraintStart_toStartOf="@+id/textView"
						 app:layout_constraintTop_toBottomOf="@+id/textView">

						 <com.google.android.material.textfield.TextInputEditText
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:hint="@string/write_your_name"
							  android:textColorHighlight="@color/welcome_txt"
							  android:textColorLink="@color/welcome_txt" />
					</com.google.android.material.textfield.TextInputLayout>

					<Button
						 android:id="@+id/btn_Next"
						 android:layout_width="@dimen/layout_zero"
						 android:layout_height="wrap_content"
						 android:layout_marginStart="@dimen/layout_margin_8dp"
						 android:layout_marginTop="@dimen/layout_marginTop_16dp"
						 android:layout_marginEnd="@dimen/layout_margin_8dp"
						 android:layout_marginBottom="@dimen/layout_margin_8dp"
						 android:background="@drawable/gradient_btn"
						 android:text="@string/next"
						 android:textColor="@android:color/white"
						 app:layout_constraintBottom_toBottomOf="parent"
						 app:layout_constraintEnd_toEndOf="@+id/textInputLayout_NameUser"
						 app:layout_constraintStart_toStartOf="@+id/textInputLayout_NameUser"
						 app:layout_constraintTop_toBottomOf="@+id/textInputLayout_NameUser" />

			   </androidx.constraintlayout.widget.ConstraintLayout>
		  </RelativeLayout>

		  <RelativeLayout
			   android:id="@+id/rtlSecondScreen"
			   android:layout_width="match_parent"
			   android:layout_height="match_parent"
			   android:padding="@dimen/layout_padding_10dp"
			   android:visibility="gone">

			   <ScrollView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					tools:ignore="UselessParent">

					<LinearLayout
						 android:layout_width="match_parent"
						 android:layout_height="wrap_content"
						 android:orientation="vertical">

						 <TextView
							  android:id="@+id/textView2"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:layout_margin="@dimen/layout_margin_5dp"
							  android:gravity="center"
							  android:text="@string/section_one"
							  android:textColor="@color/welcome_txt"
							  android:textSize="18sp"
							  android:textStyle="bold" />

						 <androidx.recyclerview.widget.RecyclerView
							  android:id="@+id/recyclerViewCheck"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_marginBottom="@dimen/layout_margin_5dp" />

						 <View
							  android:id="@+id/view"
							  android:layout_width="match_parent"
							  android:layout_height="2dp"
							  android:layout_marginBottom="@dimen/layout_margin_5dp"
							  android:background="@android:color/darker_gray" />

						 <TextView
							  android:id="@+id/textView3"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:layout_margin="@dimen/layout_margin_5dp"
							  android:gravity="center"
							  android:text="@string/section_two"
							  android:textColor="@color/welcome_txt"
							  android:textSize="18sp"
							  android:textStyle="bold" />

						 <androidx.recyclerview.widget.RecyclerView
							  android:id="@+id/recyclerViewRadio"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_marginBottom="@dimen/layout_margin_5dp" />

						 <View
							  android:id="@+id/view2"
							  android:layout_width="match_parent"
							  android:layout_height="2dp"
							  android:layout_marginBottom="@dimen/layout_margin_5dp"
							  android:background="@android:color/darker_gray" />

						 <TextView
							  android:id="@+id/textView4"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:layout_margin="@dimen/layout_margin_10dp"
							  android:gravity="center"
							  android:text="@string/section_three"
							  android:textColor="@color/welcome_txt"
							  android:textSize="@dimen/text_size_18sp"
							  android:textStyle="bold" />

						 <androidx.recyclerview.widget.RecyclerView
							  android:id="@+id/recyclerViewEdit"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_marginBottom="@dimen/layout_margin_5dp" />

						 <View
							  android:id="@+id/view3"
							  android:layout_width="match_parent"
							  android:layout_height="2dp"
							  android:layout_marginBottom="@dimen/layout_margin_5dp"
							  android:background="@android:color/darker_gray" />

						 <Button
							  android:id="@+id/btn_Score"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_margin="@dimen/layout_margin_10dp"
							  android:background="@drawable/gradient_btn"
							  android:text="@string/score"
							  android:textColor="@android:color/white" />
					</LinearLayout>
			   </ScrollView>
		  </RelativeLayout>

		  <RelativeLayout
			   android:id="@+id/rtlThirdScreen"
			   android:layout_width="match_parent"
			   android:layout_height="match_parent"
			   android:padding="@dimen/layout_padding_10dp"
			   android:visibility="gone">

			   <androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@drawable/ic_background">

					<View
						 android:id="@+id/view5"
						 android:layout_width="@dimen/layout_width_200dp"
						 android:layout_height="@dimen/layout_width_200dp"
						 android:background="@drawable/circle"
						 app:layout_constraintBottom_toBottomOf="parent"
						 app:layout_constraintEnd_toEndOf="parent"
						 app:layout_constraintStart_toStartOf="parent"
						 app:layout_constraintTop_toTopOf="parent" />

					<androidx.constraintlayout.widget.ConstraintLayout
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 app:layout_constraintBottom_toBottomOf="@+id/view5"
						 app:layout_constraintEnd_toEndOf="@+id/view5"
						 app:layout_constraintStart_toStartOf="@+id/view5"
						 app:layout_constraintTop_toTopOf="@+id/view5">

						 <TextView
							  android:id="@+id/textView5"
							  android:layout_width="wrap_content"
							  android:layout_height="wrap_content"
							  android:fontFamily="@font/aclonica"
							  android:text="@string/your_score"
							  android:textColor="@android:color/white"
							  android:textSize="@dimen/text_size_18sp"
							  android:textStyle="bold"
							  app:layout_constraintEnd_toEndOf="parent"
							  app:layout_constraintStart_toStartOf="parent"
							  app:layout_constraintTop_toTopOf="parent" />

						 <TextView
							  android:id="@+id/textView6"
							  android:layout_width="wrap_content"
							  android:layout_height="wrap_content"
							  android:layout_marginTop="@dimen/layout_marginTop_16dp"
							  android:text="@string/right_answers"
							  android:textColor="@android:color/white"
							  app:layout_constraintStart_toStartOf="@+id/textView7"
							  app:layout_constraintTop_toBottomOf="@+id/textView5" />

						 <TextView
							  android:id="@+id/textView7"
							  android:layout_width="wrap_content"
							  android:layout_height="wrap_content"
							  android:layout_marginStart="@dimen/layout_marginStart_32dp"
							  android:layout_marginTop="@dimen/layout_margin_8dp"
							  android:text="@string/wrong_answers"
							  android:textColor="@android:color/white"
							  app:layout_constraintStart_toStartOf="parent"
							  app:layout_constraintTop_toBottomOf="@+id/textView6" />

						 <TextView
							  android:id="@+id/txtCorrectAnswer"
							  android:layout_width="wrap_content"
							  android:layout_height="wrap_content"
							  android:layout_marginStart="@dimen/layout_marginTop_16dp"
							  android:layout_marginEnd="@dimen/layout_marginStart_32dp"
							  android:textColor="@android:color/white"
							  app:layout_constraintBottom_toBottomOf="@+id/textView6"
							  app:layout_constraintEnd_toEndOf="parent"
							  app:layout_constraintStart_toEndOf="@+id/view6"
							  app:layout_constraintTop_toTopOf="@+id/textView6" />

						 <TextView
							  android:id="@+id/txtWongAnswer"
							  android:layout_width="wrap_content"
							  android:layout_height="wrap_content"
							  android:layout_marginStart="@dimen/layout_marginTop_16dp"
							  android:layout_marginEnd="@dimen/layout_marginStart_32dp"
							  android:textColor="@android:color/white"
							  app:layout_constraintBottom_toBottomOf="@+id/textView7"
							  app:layout_constraintEnd_toEndOf="parent"
							  app:layout_constraintStart_toEndOf="@+id/view6"
							  app:layout_constraintTop_toTopOf="@+id/textView7" />

						 <View
							  android:id="@+id/view6"
							  android:layout_width="@dimen/layout_width_2dp"
							  android:layout_height="@dimen/layout_zero"
							  android:background="@android:color/white"
							  app:layout_constraintBottom_toBottomOf="@+id/textView6"
							  app:layout_constraintStart_toStartOf="@+id/view7"
							  app:layout_constraintTop_toTopOf="@+id/textView6" />

						 <View
							  android:id="@+id/view7"
							  android:layout_width="@dimen/layout_width_2dp"
							  android:layout_height="@dimen/layout_zero"
							  android:layout_marginStart="@dimen/layout_margin_8dp"
							  android:background="@android:color/white"
							  app:layout_constraintBottom_toBottomOf="@+id/textView7"
							  app:layout_constraintStart_toEndOf="@+id/textView7"
							  app:layout_constraintTop_toTopOf="@+id/textView7" />

						 <TextView
							  android:id="@+id/txtStatusGame"
							  android:layout_width="wrap_content"
							  android:layout_height="wrap_content"
							  android:layout_marginTop="@dimen/layout_marginTop_16dp"
							  android:fontFamily="@font/aclonica"
							  android:textColor="@android:color/white"
							  android:textSize="@dimen/text_size_18sp"
							  android:textStyle="bold"
							  app:layout_constraintEnd_toEndOf="parent"
							  app:layout_constraintStart_toStartOf="parent"
							  app:layout_constraintTop_toBottomOf="@+id/textView7" />

						 <LinearLayout
							  android:id="@+id/linearLayout"
							  android:layout_width="@dimen/layout_width_140dp"
							  android:layout_height="@dimen/layout_width_20dp"
							  android:layout_marginTop="@dimen/layout_margin_8dp"
							  android:layout_marginBottom="@dimen/layout_marginTop_16dp"
							  android:orientation="horizontal"
							  app:layout_constraintBottom_toBottomOf="parent"
							  app:layout_constraintEnd_toEndOf="@+id/textView5"
							  app:layout_constraintStart_toStartOf="@+id/textView5"
							  app:layout_constraintTop_toBottomOf="@+id/txtStatusGame">

							  <TextView
								   android:id="@+id/txtMessage"
								   android:layout_width="wrap_content"
								   android:layout_height="wrap_content"
								   android:layout_marginStart="@dimen/layout_margin_5dp"
								   android:layout_weight="1"
								   android:fontFamily="cursive"
								   android:textColor="@android:color/white"
								   android:textStyle="bold" />

							  <TextView
								   android:id="@+id/txtUserName"
								   android:layout_width="wrap_content"
								   android:layout_height="wrap_content"
								   android:layout_weight="1"
								   android:fontFamily="cursive"
								   android:textColor="@android:color/white"
								   android:textStyle="bold" />
						 </LinearLayout>
					</androidx.constraintlayout.widget.ConstraintLayout>

					<Button
						 android:id="@+id/btn_TryAgain"
						 android:layout_width="@dimen/layout_zero"
						 android:layout_height="wrap_content"
						 android:layout_marginStart="@dimen/layout_marginTop_16dp"
						 android:layout_marginTop="@dimen/layout_margin_8dp"
						 android:layout_marginEnd="@dimen/layout_marginTop_16dp"
						 android:background="@drawable/gradient_btn"
						 android:text="@string/play_again"
						 android:textColor="@android:color/white"
						 android:textStyle="bold"
						 app:layout_constraintEnd_toEndOf="@+id/view5"
						 app:layout_constraintStart_toStartOf="@+id/view5"
						 app:layout_constraintTop_toBottomOf="@+id/view5" />

			   </androidx.constraintlayout.widget.ConstraintLayout>
		  </RelativeLayout>
	 </RelativeLayout>
</LinearLayout>